# aces-scenario-packs

./: .coveragerc  .env.example  .gitignore  .ground-control.yaml  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  release-please-config.json  sonar-project.properties  towncrier.toml
.gc/: plan-rules.md
.gc/sonar/: 18-1783051021769.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  migration_task.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  pr-title.yml  prepare-release.yml  release-please.yml  release.yml  scorecard.yml  sync-main-to-dev.yml
changelog.d/: +initial-release.added.md  11.added.md  13.added.md  14.added.md  20.added.md  21.changed.md  5.added.md  README.md
contracts/: README.md  scenario-pack-contract.md
docs/: authoring-boundary.md  authoring-tooling-ownership.md  branch-protection.md  capture-workflow-placement.md  golden-readiness.md  index.md  migration-plan.md  new-pack-script.md  pack-issue-skeleton-script.md  provenance-ledger-design-guardrails.md  repository-charter.md  runtime-visibility-design-guardrails.md  scenario-packs.md  schema-design-guardrails.md  scrub-policy.md  tooling-design-guardrails.md  tracking-issues.md  versioning.md
docs/decisions/adrs/: 0001-repository-purpose-and-boundary.md  0001-scenario-pack-contract-boundary.md  0002-distribute-as-installable-package.md  0002-scenario-pack-validation-tooling.md  0003-authoring-tooling-ownership.md  0003-build-and-release-model.md  0004-capture-workflow-placement.md  0004-sbom-and-supply-chain.md  0005-automatic-release-on-merge-to-main.md  0006-conventional-commit-releases.md  0007-changelog-driven-versioning.md  0008-adopt-release-please.md  0009-scenario-packs-subordinate-to-aces.md  0010-consume-aces-reusable-asset-trust-policy.md  0011-require-pinned-aces-sdl-validation.md  0012-pack-content-identity-and-trust-boundary.md  0013-separate-consumer-static-validation-from-author-ci.md  0014-consume-aces-concept-authority.md  0015-attest-python-distribution-build-provenance.md  0015-manifest-led-catalog-pack-discovery.md  0016-automate-dependency-updates.md  0016-manifest-led-catalog-pack-discovery.md  0017-sign-release-tags-with-keyless-sigstore.md  README.md
examples/: README.md
examples/ci/: README.md  validate-pack.yml
scenarios/: README.md  pack-compatibility.schema.yaml
scenarios/_oracle/: README.md  oracle_model.py
scenarios/_oracle/fixtures/: apt29.yaml  fin7-carbanak.yaml
scenarios/_oracle/tests/: test_oracle_model.py
scenarios/_template/: pack.compatibility.example.yaml  pack.yaml
scenarios/_template/ctfd/: README.md
scenarios/_template/docs/: golden-readiness-checklist.md  provenance-ledger.example.yaml
scenarios/_template/docs/walkthroughs/: README.md
scenarios/_template/sdl/: README.md
scenarios/_template/tests/: README.md
schemas/: README.md  artifact-boundary.v0.schema.json  compatibility.v0.schema.json  delivery-bundle.v0.schema.json  index.json  lifecycle.v0.schema.json  pack-metadata.v0.schema.json  provenance.v0.schema.json  provenance.v1.schema.json  release.v0.schema.json  runtime-profile.v0.schema.json  runtime-visibility.v0.schema.json  validation.v0.schema.json
schemas/examples/: artifact-boundary.v0.example.json  compatibility.v0.example.json  delivery-bundle.v0.example.json  lifecycle.v0.example.json  pack-metadata.v0.example.json  provenance.v0.example.json  provenance.v1.example.json  release.v0.example.json  runtime-profile.v0.example.json  runtime-visibility.v0.example.json  validation.v0.example.json
scripts/: create_scenario_pack_issue_skeleton.py  new_scenario_pack.py
scripts/ci/: pack_release.py  scenario_content_ci.py
scripts/ci/tests/: test_create_scenario_pack_issue_skeleton.py  test_pack_release.py  test_scenario_content_ci.py
src/aces_scenario_packs/: __init__.py  _pack_fs.py  content_ci.py  digest.py  issue_skeleton.py  new_pack.py  oracle_model.py  release.py  validation.py
src/aces_scenario_packs/resources/contract/: pack-layout.md
templates/: README.md
templates/scenario-pack/: README.md  pack-manifest.md  provenance.md
templates/scenario-pack/scenarios/: example-scenario.md
tests/: test_authoring_tooling_ownership.py  test_capture_workflow_placement.py  test_cli_coverage.py  test_codeql_workflow.py  test_concept_authority_alignment.py  test_content_ci.py  test_digest.py  test_issue_skeleton.py  test_oracle_model.py  test_pack_cli.py  test_pack_schema_index.py  test_pack_tools.py  test_package_metadata.py  test_pr_title_guard.py  test_provenance_aces_alignment.py  test_provenance_ledger.py  test_release.py  test_release_bump.py  test_release_tag_gate.py  test_release_tool.py  test_release_workflow_attestation.py  test_release_workflow_tag_signing.py  test_repository_contract.py  test_runtime_visibility.py  test_scenario_pack_contract.py  test_schema_conventions.py  test_scorecard_workflow.py  test_template_pack_scaffold.py  test_validation.py
tests/fixtures/provenance/: invalid-attestation.json  invalid-blocked-review.json  invalid-dangling-source.json  invalid-missing-attribution.json  invalid-overlay-overlap.json  invalid-overlay-traversal.json
tests/fixtures/runtime-visibility/: invalid-traversal-root.json  invalid-unknown-tier.json
tools/: README.md  check_pr_title.py  release.py  release_bump.py  release_tag_gate.py
tools/aces_pack_tools/: __init__.py  __main__.py  cli.py  leak.py  model.py  provenance.py  release.py  schema.py  validate.py  visibility.py
(+20 files in other folders)
