[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aces-scenario-packs"
dynamic = ["version"]
description = "ACES scenario-pack definition, schemas, template, and authoring/validation tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brad Edwards" }]
keywords = ["aces", "scenario-pack", "cyber-range", "security"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = ["towncrier>=23.11.0"]

[project.urls]
Homepage = "https://github.com/Brad-Edwards/aces-scenario-packs"
Repository = "https://github.com/Brad-Edwards/aces-scenario-packs"

[project.scripts]
aces-pack-validate = "aces_scenario_packs.content_ci:main"
aces-pack-release = "aces_scenario_packs.release:main"
aces-new-pack = "aces_scenario_packs.new_pack:main"
aces-pack-issue-skeleton = "aces_scenario_packs.issue_skeleton:main"

# The version is a single committed literal in the package __init__ (ADR 0007),
# read here by hatchling. tools/release.py bumps it from the changelog fragments.
[tool.hatch.version]
path = "src/aces_scenario_packs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aces_scenario_packs"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/aces_scenario_packs",
    "/docs",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

# Release automation (ADR 0007): tools/release.py computes the next version from
# the changelog.d/ fragment types, writes the __version__ literal above, and
# collates CHANGELOG.md via towncrier. The release workflow tags it; hatchling
# reads __version__ for the build. No hatch-vcs, no commit-message versioning.
